--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,40 +13,39 @@ jobs:
       - name: 📂 Checkout repository
         uses: actions/checkout@v3
 
-      - name: 📁 Setup SSH key
+      - name: 🔐 Setup SSH to VPS
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.VPS_URMAPHA_PRIVATE_SSH }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
       - name: 🚀 Deploy and run app on VPS
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
-
             echo "[1/6] 📦 Cloner le projet ou mettre à jour..."
-            mkdir -p ~/urmapha && cd ~/urmapha
+            mkdir -p ~/collection_audios && cd ~/collection_audios
             if [ ! -d ".git" ]; then
-              git clone git@github.com:AInelo/tts-medical-management.git .  # Cloner depuis GitHub
+              git clone git@github.com:AInelo/tts-medical-management.git .
             else
               git pull
             fi
 
             echo "[2/6] 🐳 Construire l’image Docker..."
             cd api
-            docker build -t urmapha_backend .
+            docker build -t collection_audios_backend .
 
             echo "[3/6] 🧼 Nettoyage ancien conteneur..."
-            docker stop urmapha_backend || true
-            docker rm urmapha_backend || true
+            docker stop collection_audios_backend || true
+            docker rm collection_audios_backend || true
 
             echo "[4/6] 🚀 Lancer le conteneur..."
             docker run -d \
-              --name urmapha_backend \
+              --name collection_audios_backend \
               -p 3000:3000 \
               --restart unless-stopped \
-              urmapha_backend
+              collection_audios_backend
 
             echo "[5/6] 🔧 Configurer NGINX..."
             sudo cp ./urmaphalab/collection.urmapha.com /etc/nginx/sites-available/collection.urmapha.com
