--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,24 +16,34 @@ jobs:
       - name: 🔐 Setup SSH to VPS
         run: |
           mkdir -p ~/.ssh
+          # Décoder la clé privée et la sauvegarder
           echo "${{ secrets.VPS_SSH_PRIVATE_KEY_BASE64 }}" | base64 -d > ~/.ssh/id_rsa
+          # Permissions strictes pour la clé privée
           chmod 600 ~/.ssh/id_rsa
+          # Vérifier que la clé est valide
+          ssh-keygen -l -f ~/.ssh/id_rsa
+          # Ajouter l'hôte aux known_hosts
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
+      - name: 🧪 Test SSH Connection
+        run: |
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'SSH connection successful'"
 
       - name: 🚀 Deploy and run app on VPS
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
             echo "[1/6] 📦 Cloner le projet ou mettre à jour..."
             mkdir -p ~/collection_audios && cd ~/collection_audios
             if [ ! -d ".git" ]; then
-              git clone git@github.com:AInelo/tts-medical-management.git .
+              # Utilisez HTTPS au lieu de SSH pour le clone initial
+              git clone https://github.com/AInelo/tts-medical-management.git .
             else
               git pull
             fi
 
-            echo "[2/6] 🐳 Construire l’image Docker..."
+            echo "[2/6] 🐳 Construire l'image Docker..."
             cd api
             docker build -t collection_audios_backend .
 
