Fix : Correct ssh format

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,42 +20,40 @@ jobs:
       
       - name: 🚀 Deploy and run app on VPS
         run: |
-          ssh -i key.pem \
-            -o StrictHostKeyChecking=no \
-            -o UserKnownHostsFile=/dev/null \
-            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
-            'set -e
-            echo "[1/6] 📦 Cloner le projet ou mettre à jour..."
-            mkdir -p ~/collection_audios && cd ~/collection_audios
-            if [ ! -d ".git" ]; then
-              git clone https://github.com/AInelo/tts-medical-management.git .
-            else
-              git pull
-            fi
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          set -e
+          echo "[1/6] 📦 Cloner le projet ou mettre à jour..."
+          mkdir -p ~/collection_audios && cd ~/collection_audios
+          if [ ! -d ".git" ]; then
+            git clone https://github.com/AInelo/tts-medical-management.git .
+          else
+            git pull
+          fi
 
-            echo "[2/6] 🐳 Construire l\'image Docker..."
-            cd api
-            docker build -t collection_audios_backend .
+          echo "[2/6] 🐳 Construire l'image Docker..."
+          cd api
+          docker build -t collection_audios_backend .
 
-            echo "[3/6] 🧼 Nettoyage ancien conteneur..."
-            docker stop collection_audios_backend || true
-            docker rm collection_audios_backend || true
+          echo "[3/6] 🧼 Nettoyage ancien conteneur..."
+          docker stop collection_audios_backend || true
+          docker rm collection_audios_backend || true
 
-            echo "[4/6] 🚀 Lancer le conteneur..."
-            docker run -d \
-              --name collection_audios_backend \
-              -p 3000:3000 \
-              --restart unless-stopped \
-              collection_audios_backend
+          echo "[4/6] 🚀 Lancer le conteneur..."
+          docker run -d \
+            --name collection_audios_backend \
+            -p 3000:3000 \
+            --restart unless-stopped \
+            collection_audios_backend
 
-            echo "[5/6] 🔧 Configurer NGINX..."
-            sudo cp ./urmaphalab/collection.urmapha.com /etc/nginx/sites-available/collection.urmapha.com
-            sudo ln -sf /etc/nginx/sites-available/collection.urmapha.com /etc/nginx/sites-enabled/collection.urmapha.com
-            sudo nginx -t && sudo systemctl reload nginx
+          echo "[5/6] 🔧 Configurer NGINX..."
+          sudo cp ./urmaphalab/collection.urmapha.com /etc/nginx/sites-available/collection.urmapha.com
+          sudo ln -sf /etc/nginx/sites-available/collection.urmapha.com /etc/nginx/sites-enabled/collection.urmapha.com
+          sudo nginx -t && sudo systemctl reload nginx
 
-            echo "[6/6] 🔐 Installer SSL avec Certbot..."
-            sudo apt update
-            sudo apt install -y certbot python3-certbot-nginx
-            sudo certbot --nginx --non-interactive --agree-tos --email your@email.com -d collection.urmaphalab.com
+          echo "[6/6] 🔐 Installer SSL avec Certbot..."
+          sudo apt update
+          sudo apt install -y certbot python3-certbot-nginx
+          sudo certbot --nginx --non-interactive --agree-tos --email your@email.com -d collection.urmaphalab.com
 
-            echo "✅ Déploiement terminé avec succès !"'
+          echo "✅ Déploiement terminé avec succès !"
+          EOF
