--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,16 +15,16 @@ jobs:
 
       - name: 🔐 Write SSH private key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
+          echo "${{ secrets.VPS_URMAPHA_PRIVATE_SSH }}" > key.pem
           chmod 600 key.pem
       
       - name: 🧪 Test SSH Connection
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo 'SSH connection successful'"
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'SSH connection successful'"
 
       - name: 📦 Clone or update project
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[1/6] 📦 Cloner le projet ou mettre à jour..."
           mkdir -p ~/collection_audios && cd ~/collection_audios
           if [ ! -d ".git" ]; then
@@ -36,7 +36,7 @@ jobs:
 
       - name: 🐳 Build Docker image
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[2/6] 🐳 Construire l'image Docker..."
           cd ~/collection_audios/api
           docker build -t collection_audios_backend .
@@ -44,7 +44,7 @@ jobs:
 
       - name: 🧼 Clean old container
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[3/6] 🧼 Nettoyage ancien conteneur..."
           docker stop collection_audios_backend || true
           docker rm collection_audios_backend || true
@@ -52,7 +52,7 @@ jobs:
 
       - name: 🚀 Run new container
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[4/6] 🚀 Lancer le conteneur..."
           docker run -d \
             --name collection_audios_backend \
@@ -63,7 +63,7 @@ jobs:
 
       - name: 🔧 Configure NGINX
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[5/6] 🔧 Configurer NGINX..."
           sudo cp ~/collection_audios/urmaphalab/collection.urmapha.com /etc/nginx/sites-available/collection.urmapha.com
           sudo ln -sf /etc/nginx/sites-available/collection.urmapha.com /etc/nginx/sites-enabled/collection.urmapha.com
@@ -72,7 +72,7 @@ jobs:
 
       - name: 🔐 Setup SSL with Certbot
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -i key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           echo "[6/6] 🔐 Installer SSL avec Certbot..."
           sudo apt update
           sudo apt install -y certbot python3-certbot-nginx
