--- a/api/nginx/tts-medical.conf
+++ b/api/nginx/tts-medical.conf
@@ -1,7 +1,7 @@
 # nginx/tts-medical.conf
 server {
     listen 80;
-    server_name api.tts-medical.com tts-medical-api.urmapha.com;  # Remplacez par votre domaine
+    server_name collection.urmaphalab.com;  # Remplacez par votre domaine
     
     # Redirection vers HTTPS
     return 301 https://$server_name$request_uri;
@@ -9,7 +9,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name api.tts-medical.com tts-medical-api.urmapha.com;  # Remplacez par votre domaine
+    server_name collection.urmaphalab.com;  # Remplacez par votre domaine
     
     # Logs
     access_log /var/log/nginx/tts-medical-api.access.log;
