--- a/api/nginx/tts-medical.conf
+++ b/api/nginx/tts-medical.conf
@@ -1,7 +1,11 @@
 # nginx/tts-medical.conf
+
+# Rate limiting zone (doit être défini au niveau global)
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
 server {
     listen 80;
-    server_name collection.urmaphalab.com;  # Remplacez par votre domaine
+    server_name collection.urmaphalab.com;
     
     # Redirection vers HTTPS
     return 301 https://$server_name$request_uri;
@@ -9,15 +13,15 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name collection.urmaphalab.com;  # Remplacez par votre domaine
+    server_name collection.urmaphalab.com;
     
     # Logs
     access_log /var/log/nginx/tts-medical-api.access.log;
     error_log /var/log/nginx/tts-medical-api.error.log;
     
-    # SSL Configuration (géré par Certbot)
-    ssl_certificate /etc/letsencrypt/live/api.tts-medical.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.tts-medical.com/privkey.pem;
+    # SSL Configuration - CORRIGÉ: utilise le bon domaine
+    ssl_certificate /etc/letsencrypt/live/collection.urmaphalab.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/collection.urmaphalab.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
@@ -42,10 +46,6 @@ server {
         application/xml+rss
         application/json;
     
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-    limit_req zone=api_limit burst=20 nodelay;
-    
     # Client body size limit
     client_max_body_size 10M;
     
@@ -54,9 +54,22 @@ server {
     proxy_send_timeout 60s;
     proxy_read_timeout 60s;
     
-    # Main API proxy
+    # Handle preflight requests globalement
     location / {
-        proxy_pass http://localhost:3000;
+        # Rate limiting
+        limit_req zone=api_limit burst=20 nodelay;
+        
+        # CORS headers pour les requêtes OPTIONS
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+            add_header Access-Control-Max-Age 86400 always;
+            return 204;
+        }
+        
+        # Proxy vers votre application Node.js - CORRIGÉ: port 5100
+        proxy_pass http://localhost:5100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -66,34 +79,43 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # CORS headers (si nécessaire)
+        # CORS headers pour les autres requêtes
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+    }
+    
+    # Routes API spécifiques (optionnel pour une meilleure organisation)
+    location /api/ {
+        limit_req zone=api_limit burst=30 nodelay;
         
-        # Handle preflight requests
         if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+            add_header Access-Control-Max-Age 86400 always;
             return 204;
         }
+        
+        proxy_pass http://localhost:5100;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
     }
     
-    # Health check endpoint (si vous en avez un)
-    location /health {
-        proxy_pass http://localhost:3000/health;
+    # Health check endpoint
+    location = /health {
+        proxy_pass http://localhost:5100/health;
         access_log off;
-    }
-    
-    # API documentation (si vous utilisez Swagger par exemple)
-    location /docs {
-        proxy_pass http://localhost:3000/docs;
-    }
-    
-    # Static files (si votre API sert des fichiers statiques)
-    location /static/ {
-        proxy_pass http://localhost:3000/static/;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
     }
     
     # Robots.txt
