--- a/nginx/tts-medical.conf
+++ b/nginx/tts-medical.conf
@@ -19,7 +19,7 @@ server {
     access_log /var/log/nginx/tts-medical-api.access.log;
     error_log /var/log/nginx/tts-medical-api.error.log;
     
-    # SSL Configuration - CORRIGÉ: utilise le bon domaine
+    # SSL Configuration
     ssl_certificate /etc/letsencrypt/live/collection.urmaphalab.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/collection.urmaphalab.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -32,11 +32,11 @@ server {
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
     
-    # Gzip Compression
+    # Gzip Compression - CORRIGÉ
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate;
+    gzip_proxied expired no-cache no-store private auth;
     gzip_types
         text/plain
         text/css
@@ -68,7 +68,7 @@ server {
             return 204;
         }
         
-        # Proxy vers votre application Node.js - CORRIGÉ: port 5100
+        # Proxy vers votre application Node.js
         proxy_pass http://localhost:5100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -85,7 +85,7 @@ server {
         add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
     }
     
-    # Routes API spécifiques (optionnel pour une meilleure organisation)
+    # Routes API spécifiques
     location /api/ {
         limit_req zone=api_limit burst=30 nodelay;
         
@@ -137,3 +137,149 @@ server {
         log_not_found off;
     }
 }
+
+
+
+
+
+# # nginx/tts-medical.conf
+
+# # Rate limiting zone (doit être défini au niveau global)
+# limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+# server {
+#     listen 80;
+#     server_name collection.urmaphalab.com;
+    
+#     # Redirection vers HTTPS
+#     return 301 https://$server_name$request_uri;
+# }
+
+# server {
+#     listen 443 ssl http2;
+#     server_name collection.urmaphalab.com;
+    
+#     # Logs
+#     access_log /var/log/nginx/tts-medical-api.access.log;
+#     error_log /var/log/nginx/tts-medical-api.error.log;
+    
+#     # SSL Configuration - CORRIGÉ: utilise le bon domaine
+#     ssl_certificate /etc/letsencrypt/live/collection.urmaphalab.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/collection.urmaphalab.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    
+#     # Security headers
+#     add_header X-Frame-Options "SAMEORIGIN" always;
+#     add_header X-XSS-Protection "1; mode=block" always;
+#     add_header X-Content-Type-Options "nosniff" always;
+#     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+#     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    
+#     # Gzip Compression
+#     gzip on;
+#     gzip_vary on;
+#     gzip_min_length 1024;
+#     gzip_proxied expired no-cache no-store private must-revalidate;
+#     gzip_types
+#         text/plain
+#         text/css
+#         text/xml
+#         text/javascript
+#         application/javascript
+#         application/xml+rss
+#         application/json;
+    
+#     # Client body size limit
+#     client_max_body_size 10M;
+    
+#     # Timeout settings
+#     proxy_connect_timeout 60s;
+#     proxy_send_timeout 60s;
+#     proxy_read_timeout 60s;
+    
+#     # Handle preflight requests globalement
+#     location / {
+#         # Rate limiting
+#         limit_req zone=api_limit burst=20 nodelay;
+        
+#         # CORS headers pour les requêtes OPTIONS
+#         if ($request_method = OPTIONS) {
+#             add_header Access-Control-Allow-Origin "*" always;
+#             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#             add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+#             add_header Access-Control-Max-Age 86400 always;
+#             return 204;
+#         }
+        
+#         # Proxy vers votre application Node.js - CORRIGÉ: port 5100
+#         proxy_pass http://localhost:5100;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_cache_bypass $http_upgrade;
+        
+#         # CORS headers pour les autres requêtes
+#         add_header Access-Control-Allow-Origin "*" always;
+#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#         add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+#     }
+    
+#     # Routes API spécifiques (optionnel pour une meilleure organisation)
+#     location /api/ {
+#         limit_req zone=api_limit burst=30 nodelay;
+        
+#         if ($request_method = OPTIONS) {
+#             add_header Access-Control-Allow-Origin "*" always;
+#             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#             add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+#             add_header Access-Control-Max-Age 86400 always;
+#             return 204;
+#         }
+        
+#         proxy_pass http://localhost:5100;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_cache_bypass $http_upgrade;
+        
+#         add_header Access-Control-Allow-Origin "*" always;
+#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#         add_header Access-Control-Allow-Headers "Accept, Authorization, Content-Type, X-Requested-With" always;
+#     }
+    
+#     # Health check endpoint
+#     location = /health {
+#         proxy_pass http://localhost:5100/health;
+#         access_log off;
+#     }
+    
+#     # Robots.txt
+#     location = /robots.txt {
+#         add_header Content-Type text/plain;
+#         return 200 "User-agent: *\nDisallow: /\n";
+#     }
+    
+#     # Deny access to sensitive files
+#     location ~ /\. {
+#         deny all;
+#         access_log off;
+#         log_not_found off;
+#     }
+    
+#     location ~ ~$ {
+#         deny all;
+#         access_log off;
+#         log_not_found off;
+#     }
+# }
+
+
